--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/todo
     username: root
-    password: dmlwls12
+    password:
   jpa:
     hibernate:
       ddl-auto: update
